<resources>

    <!--General strings-->
    <string name="app_name">EatWithMe</string>
    <string name="no_internet">Brak dostępu do Internetu</string>

    <!--Strings related to MainActivity-->
    <string name="button_new_group">Nowa grupa</string>
    <string name="no_groups_available">Nie jesteś zapisany do żadnej z grup, spróbuj utworzyć nową grupe</string>

    <!--Strings related to RestaurantMenuActivity-->
    <string name="no_menu_available">Menu restauracji jest puste</string>
    <string name="button_go_to_cart">Koszyk</string>
    <string name="menu">Menu</string>
    <string name="products">Produkty</string>
    <string name="totalPrice">SUMA</string>
    <string name="add_to_cart">Dodano do koszyka</string>

    <!--Strings related to OrdersInGroupActivity-->
    <string name="no_orders_available">Brak aktywnych zamówień</string>
    <string name="button_new_order">Nowe zamówienie</string>
    <string name="closing_time_text">Godzina zakończenia:</string>
    <string name="number_of_order">Liczba zamówień:"</string>

    <!--Strings related to loginActivity-->
    <string name="button_create_account">Utwórz konto</string>
    <string name="error_empty_field">Pole nie może być puste</string>
    <string name="error_invalid_email">Niepoprawny adres email</string>
    <string name="error_short_password">Hasło zbyt krótkie</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="login_text">Zaloguj</string>
    <string name="login_goes_wrong">Nie udało się zalogować</string>
    <string name="title_activity_login">Sign in</string>

    <!--Strings related to signUpActivity-->
    <string name="sign_up_text">Zarejestruj</string>
    <string name="password_again">Powtórz hasło</string>
    <string name="error_defferent_passwords">Hasła nie są takie same</string>
    <string name="something_goes_wrong">Nie udało się zarejestrować</string>

    <!--Strings related to orderActivity-->
    <string name="wyczy_moje_posi_ki">Wyczyść moje posiłki</string>
    <string name="koszyk_jest_pusty">Koszyk jest pusty</string>
    <string name="moje_zamowienie">Moje zamowienie</string>
    <string name="brak">Brak</string>
    <string name="inne_zam_wienia">Inne zamówienia</string>
    <string name="nie_ma_innych_zam_wie">Nie ma innych zamówień</string>


    <!--Strings related to toolbar_main-->
    <string name="action_login">Wyloguj</string>


    <!--Strings related to signUpActivity-->
    <string name="wrong_email_text">Podany email jest już zajęty</string>
    <string name="akceptuj_zam_wienie">Akceptuj zamówienie</string>
    <string name="brak_restauracji">Brak restauracji</string>
    <string name="prompt_new_group">Nazwa nowej grupy</string>


    <!--Strings related to alertDialog-->
    <string name="dialog_title">Błąd sieci</string>
    <string name="try_again">Ponów</string>
    <string name="close">Zamknij</string>
    <string name="dialog_message">Sprawdz swoje połączenie z internetem i spróbuj ponownie</string>
    <string name="akceptuj">Akceptuj</string>
    <string name="new_order">Nowe zamówienie</string>
    <string name="new_group">Nowa grupa</string>
    <string name="group">Grupa</string>
    <string name="choose_time">Wybierz godzinę</string>
    <string name="add_to_group">Dodaj do grupy</string>

    <!--Strings related to linkDialog-->
    <string name="copy">Kopiuj</string>
    <string name="link_dialog_title">Prześlij ten link znajomym aby mogli dołączyć do grupy</string>
    <string name="copy_to_clipboard">Skopiowano do schowka</string>

    <string name="total_price_all_orders_text">Cena zamówienia:</string>
    <string name="restaurant_number_text">Numer restauracji:</string>
    <string name="order_closed">Zamówienie zakończone</string>

    <string name="back">Wróć</string>
    <string name="go_to_order">Przejdź do zamówienia</string>
    <string name="exit">Zakończ</string>
    <string name="owner_name">Zamawiający:</string>
    <string name="ok">ok</string>



</resources>
