<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".screens.order_screen.OrderFragmentActivity">
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/moje_zamowienie"
            android:id="@+id/bMyOrder"
            android:background="@color/colorButton"
            android:textColor="@color/text"
            android:textStyle="bold"/>

        <Button
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inne_zam_wienia"
            android:id="@+id/bOtherOrders"
            android:background="@color/colorButton"
            android:textColor="@color/text"
            android:textStyle="bold"/>

    </LinearLayout>
    <!--android:foreground="@drawable/ic_keyboard_arrow_up_white_18dp"-->
    <!--android:foregroundGravity="bottom|center_horizontal" />-->

    <fragment android:name="com.example.win7.restapitest.screens.order_screen.MyOrderFragment"
        android:id="@+id/my_order_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/bAccept"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <fragment android:name="com.example.win7.restapitest.screens.order_screen.OtherOrderFragment"
        android:id="@+id/other_orders_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_above="@+id/bAccept"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/akceptuj_zam_wienie"
        android:id="@+id/bAccept"
        android:background="@color/colorAccept"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:onClick="onClickAcceptOrder"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



</RelativeLayout>