<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context="com.example.win7.restapitest.screens.out_of_date_order.OutOfDateOrderActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/windowBackground"
            android:id="@+id/relative_layout">


        <include
            layout="@layout/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />


        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@+id/my_toolbar"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:id="@+id/row_order_layout"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/restaurant_name"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/primary_text"
                    android:text="restarutant_name"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/closing_time"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/secondary_text"
                    android:text="closing_time"
                    android:paddingLeft="10dp"
                    android:layout_alignTop="@+id/textView"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_toEndOf="@+id/textView"
                    android:gravity="center_horizontal"
                    android:paddingRight="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/closing_time_text"
                    android:id="@+id/textView"
                    android:textColor="@color/secondary_text"
                    android:layout_below="@+id/restaurant_name"
                    android:layout_toRightOf="@+id/imageView2"
                    android:layout_toEndOf="@+id/imageView2" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:visibility="visible"
                    android:src="@drawable/ic_group_black_18dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_below="@+id/imageView2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="false"
                    android:paddingTop="3dp"
                    android:alpha="0.5" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:src="@drawable/ic_schedule_black_18dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_below="@+id/restaurant_name"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:alpha="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:text="@string/number_of_order"
                    android:layout_alignBottom="@+id/imageView"
                    android:layout_toRightOf="@+id/imageView"
                    android:layout_toEndOf="@+id/imageView"
                    android:textColor="@color/secondary_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="number"
                    android:id="@+id/number_of_orders"
                    android:paddingLeft="10dp"
                    android:textColor="@color/secondary_text"
                    android:textStyle="bold"
                    android:layout_alignBottom="@+id/imageView"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_alignRight="@+id/closing_time"
                    android:layout_alignEnd="@+id/closing_time"
                    android:gravity="center|center_horizontal"
                    android:paddingRight="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:src="@drawable/ic_local_phone_black_18dp"
                    android:alpha="0.5"
                    android:layout_below="@+id/imageView"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:alpha="0.5"
                    android:src="@drawable/ic_monetization_on_black_18dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:layout_alignBottom="@+id/total_price"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_number_text"
                    android:id="@+id/restaurant_number_text"
                    android:layout_above="@+id/imageView4"
                    android:layout_alignLeft="@+id/textView2"
                    android:layout_alignStart="@+id/textView2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_price_all_orders_text"
                    android:id="@+id/total_price"
                    android:layout_below="@+id/imageView3"
                    android:layout_toRightOf="@+id/imageView4"
                    android:layout_toEndOf="@+id/imageView4"
                    android:layout_marginTop="7dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/restaurant_number"
                    android:layout_above="@+id/total_price"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_alignRight="@+id/number_of_orders"
                    android:layout_alignEnd="@+id/number_of_orders"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/total_price_all_orders"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    android:layout_alignTop="@+id/total_price"
                    android:layout_alignLeft="@+id/restaurant_number"
                    android:layout_alignStart="@+id/restaurant_number"
                    android:layout_alignRight="@+id/restaurant_number"
                    android:layout_alignEnd="@+id/restaurant_number" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:src="@drawable/ic_person_black_18dp"
                    android:layout_below="@+id/imageView4"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="10dp"
                    android:paddingTop="3dp"
                    android:paddingRight="10dp"
                    android:alpha="0.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/owner_name"
                    android:id="@+id/textView3"
                    android:layout_alignBottom="@+id/imageView5"
                    android:layout_toRightOf="@+id/imageView5"
                    android:layout_toEndOf="@+id/imageView5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/textView4"
                    android:layout_alignTop="@+id/textView3"
                    android:layout_alignLeft="@+id/total_price_all_orders"
                    android:layout_alignStart="@+id/total_price_all_orders"
                    android:layout_alignRight="@+id/total_price_all_orders"
                    android:layout_alignEnd="@+id/total_price_all_orders"
                    android:gravity="center_horizontal"
                    android:textStyle="bold" />

                />
            >
            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_of_purchasers"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/card_view"
            android:layout_alignEnd="@+id/card_view" />



    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
